--- a/frontend/src/app/Components/home/home.component.sass
+++ b/frontend/src/app/Components/home/home.component.sass
@@ -1,7 +1,9 @@
 
 .container
-  background: #8A2387
-  background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387)
-  background: linear-gradient(to right, #F27121, #E94057, #8A2387)
+  background-image: url("./../../../assets/Fondos/fondo1.jpg")
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
   height: 100vh
   width: 100vw
+  backdrop-filter: blur(4px)
