--- a/frontend/src/app/Components/home/sign-in/sign-in.component.html
+++ b/frontend/src/app/Components/home/sign-in/sign-in.component.html
@@ -1,1 +1,34 @@
-<button (click)="onLogin(1)" >Google</button>
+<div class="container">
+  <div *ngIf="message" [ngClass]="{'close-nab': message}" class="info"><h1 class="err">{{message}}</h1><span class="close" (click)="closeMessage()">X</span></div>
+  <div class="card">
+    <div class="card-header">
+      <div class="image-icon"></div>
+      <div class="title"><h2 class="text">{{title}}</h2></div>
+    </div>
+    <div class="body">
+      <form (ngSubmit)="onLogin(3)" #form="ngForm">
+        <div class="control-group">
+          <div class="group user">
+            <span class="icon"><i class="fas fa-user"></i></span>
+            <input type="email" class="input email" id="email" name="email" required placeholder="Correo" [(ngModel)]="user.email">
+          </div>
+        </div>
+        <div class="control-group">
+          <div class="group passw">
+            <span class="icon"><i class="fas fa-lock"></i></span>
+            <input type="password" class="input password" id="password" name="password" placeholder="Contraseña" required [(ngModel)]="user.password">
+          </div>
+        </div>
+        <div class="options">
+          <button [disabled]="!form.valid" class="btn submit">INGRESAR</button>
+          <div class="line"></div>
+          <div class="btn google" (click)="onLogin(1)">
+            <div class="icon-google"></div>
+            <div class="text-google">Entrar con Google</div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
