--- a/frontend/src/app/Components/home/sign-in/sign-in.component.html
+++ b/frontend/src/app/Components/home/sign-in/sign-in.component.html
@@ -26,6 +26,10 @@
             <div class="icon-google"></div>
             <div class="text-google">Entrar con Google</div>
           </div>
+          <div class="btn facebook" (click)="onLogin(2)">
+            <div class="icon-facebook"></div>
+            <div class="text-google">Entrar con Facebook</div>
+          </div>
         </div>
       </form>
     </div>
