--- a/frontend/src/app/Components/home/sign-in/sign-in.component.sass
+++ b/frontend/src/app/Components/home/sign-in/sign-in.component.sass
@@ -162,3 +162,25 @@
           padding-left: 2vw
           color: black
           font-weight: bold
+      
+      .facebook
+        display: flex
+        align-items: center
+        justify-content: center
+        position: relative
+        background-color: blue
+
+        .icon-facebook
+          background-image: url("../../../../assets/incon/facebook-icon.png")
+          background-position: center
+          background-size: cover
+          background-repeat: no-repeat
+          width: 3.5vh
+          height: 3.5vh
+          position: absolute
+          left: 1vw
+
+        
+
+
+          
